--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "node-cron": "^4.2.1",
     "qrcode-terminal": "^0.12.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
