--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "leo-profanity": "^1.8.0",
     "node-cron": "^4.2.1",
     "qrcode-terminal": "^0.12.0",
     "sqlite": "^5.1.1",
